# vision-label-bench

./: .gitignore  README.md  pyproject.toml  run.ps1
backend/lb_tool/: __init__.py  __main__.py  app.py  exporters.py  model_files.py  schemas.py
backend/lb_tool/adapters/: __init__.py  base.py  detr.py  registry.py  yolo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AnnotationCanvas.tsx  ClassMappingDialog.tsx  DatasetImportDialog.tsx  Header.tsx  Inspector.tsx  ModelBrowser.tsx  ModelInfoPanel.tsx  SessionRail.tsx
frontend/src/features/inference/: useInferenceController.ts
frontend/src/features/project/: useProjectController.ts
frontend/src/features/workspace/: useWorkspaceState.ts
frontend/src/lib/: annotationHistory.test.ts  annotationHistory.ts  api.test.ts  api.ts  datasetImport.test.ts  datasetImport.ts  geometry.ts  inferenceManifest.test.ts  inferenceManifest.ts  projectBackup.test.ts  projectBackup.ts  projectDocument.test.ts  projectDocument.ts  projectStore.test.ts  projectStore.ts  review.test.ts  review.ts
tests/: test_adapters.py  test_app.py  test_exporters.py
